--- a/src/kobol.vcxproj
+++ b/src/kobol.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
-    <ProjectGuid>{FA647226-5FA1-43E6-8063-44D74C78D914}</ProjectGuid>
+    <ProjectGuid>{4C1C463C-7824-401A-97F7-08471D505D20}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -75,8 +75,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(SolutionDir)\</OutDir>
-    <IntDir>$(ShortProjectName)\</IntDir>
+    <OutDir>$(SolutionDir)</OutDir>
+    <IntDir>..\obj\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -113,10 +113,10 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <WarningLevel>Level4</WarningLevel>
+      <WarningLevel>Level3</WarningLevel>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
-      <FavorSizeOrSpeed>Size</FavorSizeOrSpeed>
+      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -133,6 +133,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="move.cpp" />
     <ClCompile Include="movepick.cpp" />
+    <ClCompile Include="nnue.cpp" />
     <ClCompile Include="position.cpp" />
     <ClCompile Include="search.cpp" />
     <ClCompile Include="timeman.cpp" />
@@ -145,15 +146,16 @@
     <ClInclude Include="eval.h" />
     <ClInclude Include="hash.h" />
     <ClInclude Include="input.h" />
-    <ClInclude Include="main.h" />
     <ClInclude Include="move.h" />
     <ClInclude Include="movepick.h" />
+    <ClInclude Include="nnue.h" />
     <ClInclude Include="position.h" />
+    <ClInclude Include="zobrist.h" />
     <ClInclude Include="search.h" />
     <ClInclude Include="timeman.h" />
+    <ClInclude Include="main.h" />
     <ClInclude Include="uci.h" />
     <ClInclude Include="util.h" />
-    <ClInclude Include="zobrist.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
